--- a/apps/invitaciones/static/css/main.css
+++ b/apps/invitaciones/static/css/main.css
@@ -1,19 +1,16 @@
-body {
-    font-family: 'Titillium Web', sans-serif;
-  }
   
-  .navbar-brand {
+.navbar-brand {
     font-size: 20px;
     color: #000;
     font-weight: bold;
-  }
+}
   
-  #testimonial {
+#testimonial {
     background: #f1f1f1;
     padding: 50px 0 30px 0;
     text-align:center;
     margin-top: 40px;
-  }
+}
   
 section.portada .content-portada {
   width: 70%;
@@ -57,23 +54,22 @@ section.portada .box-nombres-fecha-portada .line {
 
 :root {
   --color: #f1f1f1;
+  --antonio-font-sanserif :  'Antonio', sans-serif;
+  --alexBrush-font-cursive: 'Alex Brush', cursive;
 }
 
 body {
   margin: 0;
-  font-family: Poppins, sans-serif;
+  font-family:var(--antonio-font-sanserif)
 }
 
 .parallax-container {
   display: flex;
-  min-height: 90vh;
+  min-height: 95vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-    background-color: #f7f7f7;
-
-
+  background-color: #f7f7f7;
   /*  this is where the magic happens:  */
   background-attachment: fixed;
   background-image: url("{{ url_for('static', filename='/img/paralax1back.jpg') }}");
@@ -89,18 +85,19 @@ body {
 
 .buffer {
   width: 100%;
-  min-height: 35vh;
+  
 }
 
 .buffer-bottom {
   width: 100%;
-  min-height: 60vh;
+  
 }
 
 .parallax-container2 {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 1.6em;
+  background-color: #f7f7f7;
 }
 
 h1 {
@@ -133,14 +130,14 @@ h3 {
 }
 
 .card {
-  opacity: 0;
+  opacity: 1;
   display: flex;
   max-width: 800px;
   flex-direction: column;
   align-items: center;
   padding-bottom: 1rem;
   border-radius: 0.5em;
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
   background-color: #22222275;
   box-shadow: 0 29px 38px -15px rgb(0 0 0 / 43%);
   color: #f1f1f1;
@@ -244,14 +241,14 @@ h3 {
 .time {
   color: #fff;
   font-size: 5em;
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
 }
 .label {
   font-size: 2em;
   display: block;
   color: #789b77;
   text-transform:uppercase;
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
 }
 .bg {
   height: 100vh;
@@ -278,32 +275,32 @@ h3 {
 }
 
 .col-md-12 > h1 {
-  font-family: 'Alex Brush', cursive;
+  font-family: var(--alexBrush-font-cursive);
   font-size: 4rem;
   color: #789b77;
 }
 
 .col-md-12 > p {
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
   font-size: 1rem;
   color: #f1f1f1;
 }
 
 .text-center > h2 {
-  font-family: 'Alex Brush', cursive;
-  font-size: 4.5vh;
+  font-family: var(--alexBrush-font-cursive);
+  font-size: 5rem;
   color: #f1f1f1;
   
 }
 .text-center > h4 {
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
   color: #f1f1f1;
   font-size: 4vh;
 }
 .text-center > h6 {
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
   color: #f1f1f1;
-  font-size: 1.5vh;
+  font-size: 1rem;
 }
 /*Animated timeline*/
 h1 {
@@ -349,31 +346,31 @@ transition: all 0.7s ease-in-out;
 }
 
 .right-content > p {
-  font-family: 'Alex Brush', cursive;
+  font-family: var(--alexBrush-font-cursive);
   font-size: 2rem;
   color: #789b77;
   padding: 0.1em;
 }
 
 .left-content > p{
-  font-family: 'Alex Brush', cursive;
+  font-family: var(--alexBrush-font-cursive);
   font-size: 2rem;
   color: #789b77;
   padding: 0.1em;
 }
 .bufferinfo {
-  font-family: 'Alex Brush', cursive;
-  font-size: 2.7vh;
+  font-family: var(--alexBrush-font-cursive);
+  font-size: 2.2rem;
   color: #000000;
 }
 
 .bufferdata {
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
   color: #9c9c9c;
 }
 
 .bufferdata2 {
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
   color: #9c9c9c;
   margin-top: -10px;
 }
@@ -398,7 +395,7 @@ transition: all 0.7s ease-in-out;
 }
 
 .slide-up {
-  transform: translateY(-20px);
+  transform: translateY(-2px);
   opacity: 1;
   transition: all 1.9s;
 }
@@ -406,7 +403,7 @@ transition: all 0.7s ease-in-out;
 .bottom-card {
   background-color: #ffffff00;
   border: 1px solid #ffffff00;
-  font-size: 1.2vh;
+  font-size: 1rem;
   width: 1000px;
   margin-top: 50px;
 }
@@ -416,8 +413,8 @@ transition: all 0.7s ease-in-out;
   border-right: hidden;
   border-left: hidden;
   border-radius: initial;
-  width: 600px;
-  font-size: 1vh;
+  width: 500px;
+  font-size: 1.3rem;
 }
 
 .sticky-top img {
@@ -437,8 +434,10 @@ transition: all 0.7s ease-in-out;
   border-right: hidden;
   border-left: hidden;
   border-radius: initial;
-  width: 300px;
-  font-size: 1vh;
+  width: 250px;
+  font-size: 1.3rem;
+  color: #666;
+  background-color: #fff;
 }
 
 @media (max-width: 576px) {
@@ -463,13 +462,17 @@ transition: all 0.7s ease-in-out;
 */ 
 
 .carousel-item {
-  height: 40vh;
-  min-height: 350px;
+  height: 30vh;
+  min-height: 500px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-position: center;
+  
+  transition: all 1s ease-in-out;
+  
 }
 /*section {
   padding-top: 5rem;
@@ -504,7 +507,7 @@ bgc2, .vLine, .hLine {
 
 .carousel-caption {
   background: #22222275;
-  font-family: 'Antonio', sans-serif;
+  font-family: var(--antonio-font-sanserif);
 }
 
 .lead{
@@ -521,13 +524,13 @@ bgc2, .vLine, .hLine {
 }
 
 .card-title {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 .card-text{
   font-size: 1rem;
 }
-
+/*
 .display-4, .lead {
   transition: transform 1s ease-in-out;
 }
@@ -546,7 +549,7 @@ bgc2, .vLine, .hLine {
 .carousel-item {
   background-size: cover;
   background-position: center;
-  transition: transform 1s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: transform 1s linear;
 }
 
 .carousel-item-next,
@@ -560,5 +563,411 @@ bgc2, .vLine, .hLine {
 .carousel-item-prev.carousel-item-right {
   transform: translateY(100%);
 }
-
+*/
 /*Testing Area*/
+
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.buffer-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  color: #789b77;
+}
+
+.buffer-bottom h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.buffer-bottom p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.buffer-bottom button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #789b77;
+  color: white;
+  cursor: pointer;
+}
+
+.buffer-bottom img {
+  width: 150px;
+  height: 150px;
+}
+
+a {
+  text-decoration: none;
+  transition: all 0.5s ease-in-out;
+}
+
+a:hover {
+  transition: all 0.5s ease-in-out;
+}
+
+.we-are-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  height: 900px;
+}
+
+@media screen and (max-width: 860px) {
+  .we-are-block {
+    height: 2200px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .we-are-block {
+    height: 2300px;
+  }
+}
+
+#about-us-section {
+  background: #789b77;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+@media screen and (max-width: 860px) {
+  #about-us-section {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+.about-us-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 860px) {
+  .about-us-image {
+    position: relative;
+    width: 100%;
+    height: 45%;
+  }
+}
+
+@media screen and (max-width: 747px) {
+  .about-us-image {
+    height: 35%;
+  }
+}
+
+@media screen and (max-width: 644px) {
+  .about-us-image img {
+    
+    left: -200px;
+  }
+}
+
+.about-us-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-evenly;
+  width: 40%;
+  height: 80%;
+  margin-right: 850px;
+  margin-left: 12px;
+  z-index: 2;
+}
+
+@media screen and (max-width: 1353px) {
+  .about-us-info {
+    margin-right: 400px;
+    width: 60%;
+    background: #789b77;
+    padding: 0px 25px 0px 0px;
+  }
+}
+
+@media screen and (max-width: 1238px) {
+  .about-us-info {
+    margin-right: 340px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1111px) {
+  .about-us-info {
+    margin-right: 270px;
+  }
+}
+
+@media screen and (max-width: 910px) {
+  .about-us-info {
+    margin-right: 150px;
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .about-us-info {
+    margin: 0px 0px 0px 0px !important;
+    padding: 0px 20px 0px 20px !important;
+    width: 100%;
+    height: 55%;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 747px) {
+  .about-us-info {
+    height: 65%;
+  }
+}
+
+.about-us-info h2 {
+  color: white;
+  font-size: 40pt;
+  text-align: right;
+}
+
+@media screen and (max-width: 860px) {
+  .about-us-info h2 {
+    text-align: center;
+  }
+}
+
+.about-us-info p {
+  color: white;
+  font-size: 1.6em;
+  text-align: right;
+}
+
+@media screen and (max-width: 860px) {
+  .about-us-info p {
+    text-align: center;
+  }
+}
+
+.about-us-info a {
+  background-color: white;
+  color: #789b77;
+  width: 180px;
+  text-align: center;
+  padding: 15px 0px 15px 0px;
+  font-size: 14pt;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.about-us-info a:hover {
+  background: #789b77;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  transform: translateY(10px);
+}
+
+#history-section {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+@media screen and (max-width: 860px) {
+  #history-section {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+.history-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 820px;
+  height: 100%;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 860px) {
+  .history-image {
+    position: relative;
+    width: 100%;
+    height: 40%;
+  }
+}
+
+@media screen and (max-width: 747px) {
+  .history-image {
+    height: 35%;
+  }
+}
+
+@media screen and (max-width: 644px) {
+  .history-image img {
+    position: absolute;
+    right: -220px;
+  }
+}
+
+.history-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  width: 40%;
+  height: 80%;
+  margin-left: 850px;
+  margin-right: 12px;
+  z-index: 2;
+}
+
+@media screen and (max-width: 1353px) {
+  .history-info {
+    margin-left: 400px;
+    width: 60%;
+    background: #ffffff99;
+    padding: 0px 0px 0px 25px;
+  }
+}
+
+@media screen and (max-width: 1238px) {
+  .history-info {
+    margin-left: 340px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1111px) {
+  .history-info {
+    margin-left: 270px;
+  }
+}
+
+@media screen and (max-width: 910px) {
+  .history-info {
+    margin-left: 150px;
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .history-info {
+    margin: 0px 0px 0px 0px !important;
+    padding: 0px 40px 0px 40px !important;
+    width: 100%;
+    height: 60%;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 747px) {
+  .history-info {
+    height: 65%;
+  }
+}
+
+.history-info h2 {
+  color: #789b77;
+  font-size: 40pt;
+  text-align: left;
+}
+
+@media screen and (max-width: 860px) {
+  .history-info h2 {
+    text-align: center;
+  }
+}
+
+.history-info p {
+  color: #789b77;
+  font-size: 1.6em;
+  text-align: left;
+}
+
+@media screen and (max-width: 860px) {
+  .history-info p {
+    text-align: center;
+  }
+}
+
+.history-info a {
+  background-color: #789b77;
+  color: white;
+  width: 180px;
+  text-align: center;
+  padding: 15px 0px 15px 0px;
+  font-size: 14pt;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.history-info a:hover {
+  background: white;
+  color: #789b77;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  transform: translateY(10px);
+}
+
+
+.fade-in-section {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+  will-change: opacity, visibility;
+}
+
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
+.modifier-us-section{
+  background: none;
+
+}
+
+.modifier-us-info{
+  display: contents;
+}
+
+.modal-lg{
+  max-width: 100% !important;
+}
+
+
+.modal-wide {
+  max-width: 90% !important;
+  margin: 30px auto !important;
+}
+
+@media (max-width: 767px) {
+  .modal-wide {
+    max-width: 100%;
+    margin: 10px auto;
+  }
+}
+
+.carousel-inner {
+  max-height: 500px;
+}
